Изменил БД на Sql Server

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQLiteDB.db;Mode=ReadWrite;Password=Wtkmyjvtnfkkbxtcrbq12345;"
+    "DefaultConnection": "Data Source=DESKTOP-IPLT3OI;Initial Catalog=Rocky;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
