--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-IPLT3OI;Initial Catalog=Rocky;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DefaultConnection": "Data Source=DESKTOP-IPLT3OI;Initial Catalog=Rocky;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=217.28.223.127,17160;User Id=user_fffad;Password=d/4F+2HecT=36s;Database=db_a84f9;Trusted_Connection=True;MultipleActiveResultSets=True;Trust Server Certificate=True;Integrated Security = false;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
